src/objects/Response__c.object
<CustomObject>
    <description>COMPLIANCE SURVEY Stores all the individual completed survey for a compliance survey</description>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <description>User operating group</description>
        <inlineHelpText>Redwood, Cambridge, NeuroRestorative, CareMeridian, Corporate</inlineHelpText>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State where employee works</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed with Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed with Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed without Exceptions</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <description>Employee supervisor&apos;s full name</description>
        <label>Supervisor Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Compliance Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMN_User__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TMN User</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Compliance Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <label>Compliance Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>TMN_User__c</columns>
        <columns>Survey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>